<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mytaxi</string>
    <string name="home">Home</string>
    <string name="lang" >Langue</string>
    <string name="profil_title">Profil</string>
    <string name="mode">mode</string>
    <string name="start" >Start</string>
    <string name="distancetime" >Distance: 0.0 km\nTime: 0 min</string>
    <string name="tarif" >Tarif Total: 0.0 DH</string>
    <string name="driver" >Ahmed Salmi</string>
    <string name="age" >Age: 30</string>
    <string name="License">License: Type B</string>
    <string name="qr">Scan QR Code:</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="ride_started">Ride Started</string>
    <string name="total_fare">Total Fare: %.2f DH</string>
    <string name="ride_details">Ride Details</string>
    <string name="time">Time: %.2f min</string>
    <string name="distance_time">Distance: %.2f km | Time: %s</string>
    <string name="unable_to_get_location">Unable to get location</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="choose_your_theme">Choose Your Theme</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
</resources>
