<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/background_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_your_theme"
        android:textColor="@color/text_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_light_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/yellow"
        android:drawableLeft="@drawable/baseline_sunny_24"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:tint="@color/button_arabic_dark"
        android:text="@string/light_mode"
        android:textColor="@color/text_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_dark_mode"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        app:layout_constraintHorizontal_bias="0.2" />

    <Button
        android:id="@+id/btn_dark_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dark_gray"
        android:drawableLeft="@drawable/baseline_nightlight_round_24"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:text="@string/dark_mode"
        android:textColor="@color/text_light"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/btn_light_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        app:layout_constraintHorizontal_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
